Fix scaling on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
 	height: 0;
-	min-height: 100vh;
+	min-height: 100svh;
 	padding-top: calc(var(--nav-height) + var(--names-height));
 	background-color: rgb(200, 200, 200);
 }
